--- a/cobi-gottschalk/src/App.css
+++ b/cobi-gottschalk/src/App.css
@@ -16,6 +16,10 @@ body {
 }
 
 ul {
+margin-left: -30px;
+}
+
+.navigation{
   background-color: rgb(0, 0, 0, 0.85);
   background-color: rgb(0, 0, 0);
 }
@@ -51,22 +55,21 @@ Footer {
 
 
 
-/* width */
+/* 
 ::-webkit-scrollbar {
   width: 20px;
 }
 
-/* Track */
+
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey; 
-  /* border-radius: 10px; */
   background-color: rgb(245, 245, 245);
 }
 
-/* Handle */
+
 ::-webkit-scrollbar-thumb {
   background: rgb(0, 0, 0); 
-  /* border-radius: 5px; */
+
 }
 
 
@@ -74,10 +77,10 @@ Footer {
   transition: 200ms color;
 }
 
-/* Handle on hover */
+
 ::-webkit-scrollbar-thumb:hover {
   background: #aaaaaa; 
-}
+} */
 
 
 
@@ -235,7 +238,120 @@ path {
 
 /* --------------------HERO COMPONENT ABOVE--------------- */
 
+
+
+
+
+
+/* -------------------------- Portfolio Below------------------------- */
+
+
+.portfolio-nav-active{
+  background-color: rgb(255, 1, 1);
+}
+
+/* -------------------------- Portfolio Above------------------------- */
+
+
+
+
+
+
+
+/*--------------------------- CODING COMPONENT BELOW-------------------- */
+
+
+
+
+
+.coding-ul{
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  font-family: "Bebas Neue", sans-serif;
+}
+
+.coding-ul li{
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.coding-ul li:hover{
+  text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*--------------------------- CODING COMPONENT ABOVE-------------------- */
+
+
+
+
+
+
+
+
+
+
 /*--------------------------- Portfolio Page--------------------------------- */
+
+
+/* .portfolio-container{
+  display: flex;
+
+} */
+
+
+.portfolio-nav{
+  /* margin-top: 1px; */
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  gap: 30px;
+  font-size: 1.2rem;
+ background-color: black;
+}
+
+.portfolio-nav li {
+  border: solid rgb(255, 255, 255);
+  /* border: solid rgb(199, 0, 0); */
+  border-top: none;
+  border-bottom: none;
+  padding: 10px;
+  width: 100px;
+  text-align: center;
+  cursor: pointer;
+  font-family: "Bebas Neue", sans-serif;
+  color: white;
+  transition: 200ms background-color ease-in;
+}
+
+.portfolio-nav li:hover {
+  background-color: rgb(255, 255, 255);
+  color: black;
+}
+
+.portfolio-left-section-one{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.portfolio-right-section-one{
+  display: flex;
+  width: 50%;
+  background-color: #000000;
+}
 
 .projects-container {
   display: flex;
@@ -243,19 +359,13 @@ path {
   flex-wrap: wrap;
 }
 
-.recent-work {
-  padding-bottom: 8px;
-}
+
 
 .project-container {
-  /* width: 271.2px; */
-  /* height: 400px; */
   border: solid rgb(0, 0, 0);
-
   margin: 10px;
   opacity: 0.9;
   transition: opacity 500ms, border 500ms, box-shadow 500ms;
-  /* box-shadow: 8px 5px 5px rgb(2, 2, 2); */
   background-color: black;
 }
 
@@ -271,7 +381,7 @@ path {
   width: 266.5px;
   height: 395px;
   cursor: pointer;
-  /* box-shadow: 5px 6px 6px rgb(0, 0, 0); */
+  box-shadow: 5px 6px 6px rgb(0, 0, 0);
 }
 
 .project-name-overlay {
@@ -339,8 +449,8 @@ path {
   text-align: center;
   font-family: "Oswald", sans-serif;
   font-weight: 500;
-  background-color: #000000;
-  color: white;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
 
 }
 
@@ -388,6 +498,31 @@ path {
     opacity: 0;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* ------------------------------FIRST NAV BELOW----------------------------------------------- */
 
@@ -440,6 +575,14 @@ a.navigation-link:hover {
   color: black;
 }
 
+
+/* a.active neevds to be worked on */
+
+a.active {
+  background-color: white;
+  color: black;
+}
+
 .navigation-resume {
   color: white;
 }
@@ -488,8 +631,9 @@ a.navigation-link .navigation-resume:hover {
   display: flex;
   padding: 0px;
   height: 100%;
-  margin: 0;
+  /* margin: 0; */
   /* height: 50vh; */
+  margin: 25px;
 }
 
 .about-h2{
@@ -545,6 +689,7 @@ a.navigation-link .navigation-resume:hover {
 input{
   width: 500px;
   width: 100%;
+  height: 30px;
 }
 
 textarea{
@@ -557,6 +702,7 @@ textarea{
 
 .submit-btn {
   background-color: #007bff;
+  /* background-color: #7bcaff; */
   width: 101%;
   color: #fff;
   border: none;
@@ -569,6 +715,7 @@ textarea{
 
 .submit-btn:hover {
   background-color: #0056b3;
+  /* background-color: #741616; */
 }
 
 
