--- a/cobi-gottschalk/src/App.css
+++ b/cobi-gottschalk/src/App.css
@@ -25,6 +25,7 @@ margin-left: -40px;
 .navigation{
   background-color: rgb(0, 0, 0, 0.85);
   background-color: rgb(0, 0, 0);
+  
 }
 
 .secondary-nav-link.active {
@@ -35,6 +36,7 @@ margin-left: -40px;
   padding: 15px;
   transition: 800ms box-shadow;
   /* box-shadow: inset 5em 1em rgb(71, 71, 71); */
+ 
 }
 
 .secondary-nav-link .active {
@@ -120,6 +122,29 @@ Footer {
 
 
 /* -------------------------UNIVERSAL RULES ABOVE------------------------------ */
+
+
+
+
+
+.sticky-nav{
+  position: sticky;
+      top: 0;
+      z-index: 2;
+
+}
+
+
+.sticky-foot{
+  position: sticky;
+      bottom: 0;
+      z-index: 2;
+}
+
+
+
+
+
 
 /*------------------------------ NavTabs Component BELOW---------------------------- */
 
@@ -216,11 +241,15 @@ path {
 /* --------------------HERO COMPONENT BELOW--------------- */
 
 .hero-component {
-  background-color: rgb(129, 0, 0);
-  /* height: 100%; */
+  position: relative;
+  background-color: rgb(5, 5, 5);
   width: 100%;
-  z-index: 1;
-  background-image: url("https://images.unsplash.com/photo-1558730234-d8b2281b0d00?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHBvcnRyYWl0fGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60");
+  z-index: 0; /* Increase the z-index value to bring it in front of hero-image-two */
+  /* background-image: url("./images/image7.png");
+  background-size: 150px;
+  background-position: left;
+  background-repeat: no-repeat; */
+  background-image: url("https://images.unsplash.com/photo-1542362567-b07e54358753?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNhcnN8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60");
   background-size: cover;
   background-position: center;
   background-size: cover;
@@ -243,11 +272,6 @@ path {
   /* height: 100%; */
   width: 100%;
   z-index: 1;
-  background-image: url("https://plus.unsplash.com/premium_photo-1682125740214-fcddeef28561?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Y2Fyc3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60");
-  background-size: cover;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 
@@ -587,12 +611,22 @@ a.navigation-link:hover {
   color: black;
 }
 
+a.navigation-contact-active{
+  background-color: white;
+  color: black;
+  padding: 0px 10px;
+}
 
 /* a.active neevds to be worked on */
 
 a.active {
   background-color: white;
   color: black;
+}
+
+a.navigation-contact-item-active{
+border:black;
+background-color: white;
 }
 
 .navigation-resume {
@@ -606,6 +640,9 @@ a.active {
   display: flex;
   margin-right: 40px;
   margin-bottom: 25px;
+  font-family: "Oswald", "Courier New", Courier, monospace;
+/* gap: 10px; */
+
 }
 
 .navigation-link {
@@ -617,10 +654,10 @@ a.navigation-link:hover {
   color: black;
 }
 
-a.navigation-link .navigation-resume:hover {
+/* a.navigation-link .navigation-resume:hover {
   color: rgb(255, 255, 255);
   text-decoration: none;
-}
+} */
 
 .navigation-item {
   height: min-content;
@@ -919,6 +956,7 @@ footer {
     display: flex;
   flex-direction: column;
   align-items: center;
+  border: solid;
     
   }
   
@@ -931,6 +969,7 @@ footer {
     align-items: center;
     justify-content: center;
     background-size: cover;
+    border: solid;
   
   }
 
@@ -1078,6 +1117,7 @@ footer {
   color: black;
   text-align: center;
   font-family: 'Bebas Neue';
+  border: solid black 1px;
 }
 
 
@@ -1096,3 +1136,224 @@ footer {
 
 
 /* -------------------------------EDUCATION COMPONENT ABOVE----------------------- */
+
+
+
+
+
+
+
+
+
+
+
+/* ----------------------------------------------MEDIA-QUERIES BELOW---------------------------------------------------------------- */
+
+
+
+
+
+
+.secondary-nav-and-hero {
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+@media (max-width: 1200px) {
+  .secondary-nav-and-hero {
+    /* flex-wrap: wrap; */
+  }
+
+  .secondary-nav-component {
+    margin: 0;
+    width: 50%;
+    background-color: rgb(255, 255, 255);
+    border-right: solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+.hero-component {
+  position: relative;
+  background-color: rgb(5, 5, 5);
+  width: 100%;
+  z-index: 0;
+  background-image: url(https://images.unsplash.com/photo-1542362567-b07e54358753?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNhcnN8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60);
+  background-size: cover;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.contact-component{
+  flex-direction: column;
+}
+
+.left-section-one {
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Bebas Neue';
+}
+
+.right-section-one {
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  height: 500px;
+}
+ }
+
+
+
+ @media (max-width: 768px){
+  .secondary-nav-and-hero {
+    flex-wrap: wrap;
+
+  }
+
+  .secondary-nav-component ul {
+    background-color: transparent;
+    text-wrap: nowrap;
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+    gap: 20px;
+    margin-left: 25px;
+}
+
+.secondary-nav-link{
+  font-size: 44px;
+}
+
+  .secondary-nav-component {
+    margin: 0;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    border-right: solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+.hero-component{
+  height: 300px;
+}
+
+
+.container-right-left {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column-reverse;
+  width: 100%;
+}
+
+.education-left-section-one {
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.education-right-section-one {
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+}
+
+
+.school-logos {
+  width: 50%;
+  height: 50%;
+  width: 300px;
+  height: 300px;
+}
+ }
+
+
+
+
+ @media (max-width: 576px){
+  .secondary-nav-link{
+    font-size: 34px;
+  }
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ /* @media (max-width: 992px) { 
+  
+  .contact-component {
+    
+    flex-wrap: wrap;
+}
+  } */
+
+
+
+
+
+/* Extra Small (XS) Screens:
+Typically, smartphones in portrait orientation fall into this category.
+Suggested breakpoint:  */
+@media (max-width: 576px) { /* Your CSS here */ }
+
+/* Small Screens (SM):
+Larger smartphones in landscape orientation, small tablets.
+Suggested breakpoint:  */
+@media (min-width: 576px) and (max-width: 768px) { /* Your CSS here */ }
+
+/* Medium Screens (MD):
+Most tablets and smaller desktop screens.
+Suggested breakpoint:  */
+@media (min-width: 768px) and (max-width: 992px) { /* Your CSS here */ }
+
+/* Large Screens (LG):
+Larger desktop monitors and laptops.
+Suggested breakpoint:  */
+@media (min-width: 992px) and (max-width: 1200px) { /* Your CSS here */ }
+
+/* Extra Large Screens (XL):
+Extra-large desktop monitors and high-resolution displays.
+Suggested breakpoint: */
+ @media (min-width: 1200px) { /* Your CSS here */ }
+
+
+
+
+
+
+
+
+
+
+
+/* ----------------------------------------------MEDIA-QUERIES ABOVE---------------------------------------------------------------- */
