--- a/cobi-gottschalk/src/App.css
+++ b/cobi-gottschalk/src/App.css
@@ -1247,6 +1247,18 @@ footer {
   height: 300px;
 }
 
+/* ----------about -------------*/
+
+.about-component{
+  flex-wrap: wrap;
+  flex-direction: column;  
+}
+
+
+
+
+/*------------ education----------- */
+
 
 .container-right-left {
   display: flex;
@@ -1288,19 +1300,82 @@ footer {
 
 
  @media (max-width: 576px){
+
+.first-name{
+  margin-left: -30px;
+}
+
   .secondary-nav-link{
     font-size: 34px;
   }
+
+  .secondary-nav-link{
+    /* display: none; */
+  }
+
+  .resume-contact{
+    display: none;
+  }
+
+  .show-on-mobile {
+    display: block; /* Show the elements on larger screens */
+  }
+
+  .secondary-nav-component {
+    overflow-x: scroll;
+    justify-content: flex-end;
+    height: 170px;
+    padding-right: 150px;
  }
 
+ /* .secondary-nav-component ul {
+  background-color: transparent;
+  text-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-left: 0px;
+} */
+
+/* -------education--------- */
+
+.left-container-one {
+  background-color: rgba(255, 255, 255, 0.856);
+  width: 80%;
+  height: 80%;
+  color: black;
+  text-align: center;
+  font-family: 'Bebas Neue';
+  border: solid black 1px;
+}
+}
 
 
 
 
 
+@media (max-width: 530px){
+  .secondary-nav-component {
+    padding-left: 100px;
+    padding-right: 100px;
+ }
+}
+
+@media (max-width: 470px){
+  .secondary-nav-component {
+    padding-left: 100px;
+    padding-right: 30px;
+ }
+}
 
 
 
+@media (max-width: 390px){
+  .secondary-nav-component {
+    padding-left: 120px;
+    padding-right: 0px;
+ }
+}
 
 
 
