--- a/cobi-gottschalk/src/App.css
+++ b/cobi-gottschalk/src/App.css
@@ -61,17 +61,68 @@ margin-left: -40px;
   background-color: rgb(255, 255, 255);
   height: 500px;
   display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: flex-end;
+  font-family: 'Bebas Neue';
+  
+  background-image: url('./images/image7.png');
+  /* background-size: 210px; */
+  background-size: 204px;
+  background-repeat: no-repeat;
+  background-position: left;
+
+  /* background-position: right; */
+  
+  /* background-position: left;
+  transform: scaleX(-1); */
+}
+
+
+/* Need column for contact page left side  */
+.left-section-one{
+  width: 50%;
+  background-color: rgb(255, 255, 255);
+  height: 500px;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   font-family: 'Bebas Neue';
+  background-image: url('./images/image7.png');
+  background-size: 204px;
+  background-repeat: no-repeat;
+  background-position: left;
+}
 
+
+
+
+.left-section-one{
+  width: 50%;
+  background-color: rgb(255, 255, 255);
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  font-family: 'Bebas Neue';
+  background-image: url('./images/image7.png');
+  background-size: 204px;
+  background-repeat: no-repeat;
+  background-position: left;
 }
 
 .right-section-one{
   width: 50%;
   background-color: rgb(0, 0, 0);
   height: 500px;
+}
+
+.left-inside-section-one{
+  display: flex;
+  width: 50%;
+  justify-self: flex-end;
 }
 
 Footer {
@@ -1196,11 +1247,11 @@ footer {
   width: 100%;
   background-color: rgb(255, 255, 255);
   height: 500px;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: 'Bebas Neue';
+  font-family: 'Bebas Neue'; */
 }
 
 .right-section-one {
@@ -1347,6 +1398,7 @@ footer {
   text-align: center;
   font-family: 'Bebas Neue';
   border: solid black 1px;
+ 
 }
 }
 
