--- a/cobi-gottschalk/src/App.css
+++ b/cobi-gottschalk/src/App.css
@@ -300,7 +300,7 @@ path {
   background-size: 150px;
   background-position: left;
   background-repeat: no-repeat; */
-  background-image: url("https://images.unsplash.com/photo-1542362567-b07e54358753?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNhcnN8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60");
+  /* background-image: url("https://images.unsplash.com/photo-1542362567-b07e54358753?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNhcnN8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60"); */
   background-size: cover;
   background-position: center;
   background-size: cover;
@@ -1198,6 +1198,53 @@ footer {
 
 
 
+
+/* Add this to your CSS */
+.scroll-to-top-button {
+  display: none; /* Initially hidden */
+  position: fixed;
+  top: 40px;
+  right: 20px;
+  background-color: #ffffff;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  /* border-radius: 50%; */
+  cursor: pointer;
+  text-align: center;
+  line-height: 40px;
+  font-size: 20px;
+  transition: opacity 200ms ease-in-out, transform 200ms ease-in-out; /* Use ease-in-out for smoother transitions */
+  color: black;
+  fill: black;
+  z-index: 4;
+}
+
+.scroll-to-top-button.visible {
+  display: block; /* Visible when scrolled past a certain point */
+  opacity: 1; /* Ensure full opacity when visible */
+  transform: scale(1); /* Ensure full size when visible */
+}
+
+.scroll-to-top-button:hover {
+  /* background-color: #c2c2c2; */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ----------------------------------------------MEDIA-QUERIES BELOW---------------------------------------------------------------- */
 
 
@@ -1232,11 +1279,13 @@ footer {
   background-color: rgb(5, 5, 5);
   width: 100%;
   z-index: 0;
-  background-image: url(https://images.unsplash.com/photo-1542362567-b07e54358753?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNhcnN8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60);
+  /* background-image: url(https://images.unsplash.com/photo-1542362567-b07e54358753?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNhcnN8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=500&q=60); */
   background-size: cover;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+
+background-color: black;
 }
 
 .contact-component{
@@ -1264,6 +1313,10 @@ footer {
 
 
  @media (max-width: 768px){
+
+  body{
+    overflow-x: hidden;
+  }
   .secondary-nav-and-hero {
     flex-wrap: wrap;
 
@@ -1314,12 +1367,12 @@ footer {
 .container-right-left {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column-reverse;
+  flex-direction: column;
   width: 100%;
 }
 
 .education-left-section-one {
-  width: 100%;
+  width: 98.8%;
   background-color: rgb(255, 255, 255);
   height: 400px;
   display: flex;
@@ -1328,7 +1381,7 @@ footer {
 }
 
 .education-right-section-one {
-  width: 100%;
+  width: 98.8%;
   background-color: rgb(0, 0, 0);
   height: 400px;
   display: flex;
@@ -1349,8 +1402,58 @@ footer {
 
 
 
+/* DOESNT WORK */
+/* 
+ @media (min-width: 576px){
+
+
+.scroll-to-top-button {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #ffffff;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  text-align: center;
+  line-height: 40px;
+  font-size: 20px;
+  transition: opacity 200ms ease-in-out, transform 200ms ease-in-out; 
+  color: black;
+  fill: black;
+  z-index: 4;
+}
+
+.scroll-to-top-button.visible {
+  display: block; 
+  opacity: 1; 
+  transform: scale(1); 
+}
+
+.scroll-to-top-button:hover {
+}
+
+
+ } */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
  @media (max-width: 576px){
+
 
 .first-name{
   margin-left: -30px;
@@ -1400,6 +1503,17 @@ footer {
   border: solid black 1px;
  
 }
+
+
+
+
+
+
+
+
+
+
+
 }
 
 
@@ -1407,6 +1521,8 @@ footer {
 
 
 @media (max-width: 530px){
+
+
   .secondary-nav-component {
     padding-left: 100px;
     padding-right: 100px;
@@ -1415,7 +1531,7 @@ footer {
 
 @media (max-width: 470px){
   .secondary-nav-component {
-    padding-left: 100px;
+    padding-left: 160px;
     padding-right: 30px;
  }
 }
@@ -1425,11 +1541,10 @@ footer {
 @media (max-width: 390px){
   .secondary-nav-component {
     padding-left: 120px;
+    /* padding-left: 230px; */
     padding-right: 0px;
  }
 }
-
-
 
 
 
