--- a/cobi-gottschalk/src/App.css
+++ b/cobi-gottschalk/src/App.css
@@ -1205,15 +1205,11 @@ footer {
   position: fixed;
   top: 40px;
   right: 20px;
-  background-color: #ffffff;
-  color: #fff;
-  width: 40px;
-  height: 40px;
-  /* border-radius: 50%; */
+  /* background-color: #ffffff; */
+  /* color: #fff; */
   cursor: pointer;
   text-align: center;
-  line-height: 40px;
-  font-size: 20px;
+  font-weight: 900;
   transition: opacity 200ms ease-in-out, transform 200ms ease-in-out; /* Use ease-in-out for smoother transitions */
   color: black;
   fill: black;
@@ -1372,7 +1368,8 @@ background-color: black;
 }
 
 .education-left-section-one {
-  width: 98.8%;
+  /* width: 98.8%; */
+  width: 100%;
   background-color: rgb(255, 255, 255);
   height: 400px;
   display: flex;
@@ -1381,7 +1378,8 @@ background-color: black;
 }
 
 .education-right-section-one {
-  width: 98.8%;
+  /* width: 98.8%; */
+  width: 100%;
   background-color: rgb(0, 0, 0);
   height: 400px;
   display: flex;
@@ -1540,7 +1538,7 @@ background-color: black;
 
 @media (max-width: 390px){
   .secondary-nav-component {
-    padding-left: 120px;
+    padding-left: 160px;
     /* padding-left: 230px; */
     padding-right: 0px;
  }
