--- a/cobi-gottschalk/src/App.css
+++ b/cobi-gottschalk/src/App.css
@@ -62,7 +62,27 @@ margin-left: -40px;
 
 
 
+.contact-left-section-one{
+  width: 50%;
+  background-color: rgb(255, 255, 255);
+  height: 500px;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: flex-end;
+  font-family: 'Bebas Neue';
+  
+  
+  /* background-size: 210px; */
+  background-size: 204px;
+  background-repeat: no-repeat;
+  background-position: left;
 
+  /* background-position: right; */
+  
+  /* background-position: left;
+  transform: scaleX(-1); */
+}
 
 
 
@@ -100,7 +120,7 @@ margin-left: -40px;
   align-items: center;
   justify-content: flex-end;
   font-family: 'Bebas Neue';
-  background-image: url('./images/image7.png');
+  /* background-image: url('./images/image7.png'); */
   background-size: 204px;
   background-repeat: no-repeat;
   background-position: left;
@@ -118,7 +138,22 @@ margin-left: -40px;
   align-items: center;
   justify-content: flex-end;
   font-family: 'Bebas Neue';
-  background-image: url('./images/image7.png');
+  /* background-image: url('./images/image7.png'); */
+  background-size: 204px;
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+.contact-left-section-one{
+  width: 50%;
+  background-color: rgb(255, 255, 255);
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  font-family: 'Bebas Neue';
+  /* background-image: url('./images/image7.png'); */
   background-size: 204px;
   background-repeat: no-repeat;
   background-position: left;
@@ -377,9 +412,10 @@ path {
   color:black;
 }
 
-.portfolio-nav li{
+/* .portfolio-nav li{
   color: pink;
-}
+  color: white;
+} */
 
 /* -------------------------- Portfolio Above------------------------- */
 
@@ -462,13 +498,23 @@ path {
   text-align: center;
   cursor: pointer;
   font-family: "Bebas Neue", sans-serif;
-  color: rgb(255, 172, 172);
+  /* color: rgb(255, 172, 172); */
+  color: white;
   
   transition: 200ms background-color ease-in;
 }
 
 .portfolio-nav li:hover {
   background-color: rgb(255, 255, 255);
+  color: black;
+}
+
+.portfolio-nav li:active {
+  background-color: rgb(255, 255, 255);
+  color: black;
+}
+
+li.portfolio-nav-active{
   color: black;
 }
 
@@ -1056,7 +1102,7 @@ footer {
   text-align: center;
   font-family: 'Bebas Neue';
   background-color: rgb(219, 0, 0);
-  color: white;
+  color: rgb(0, 0, 0);
   /* color: black; */
   border: solid black 2px;
 
@@ -1325,6 +1371,18 @@ background-color: black;
   font-family: 'Bebas Neue'; */
 }
 
+.contact-left-section-one {
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  height: 500px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Bebas Neue'; */
+  text-align: center;
+}
+
 .right-section-one {
   width: 100%;
   background-color: rgb(0, 0, 0);
@@ -1366,6 +1424,16 @@ background-color: black;
 
 .secondary-nav-link{
   font-size: 44px;
+  padding-right: 15px ;
+}
+
+.secondary-nav-link.active {
+  box-shadow: 60px -16px #000;
+  box-shadow: 10px 5px 5px #4b4b4b;
+  color: #f5f5f5;
+  color: #000;
+  padding-left: 0px;
+  transition: box-shadow .8s;
 }
 
 /* .secondary-nav-link:hover {
@@ -1374,6 +1442,7 @@ background-color: black;
   color: black;
   box-shadow: none;
 } */
+
 
   .secondary-nav-component {
     margin: 0;
@@ -1525,7 +1594,7 @@ background-color: black;
     overflow-x: scroll;
     justify-content: flex-end;
     /* height: 170px; */
-    /* padding-right: 150px; */
+    padding-right: 10px;
  }
 
  /* .secondary-nav-component ul {
