--- a/cobi-gottschalk/src/App.css
+++ b/cobi-gottschalk/src/App.css
@@ -831,7 +831,67 @@ a.navigation-link:hover {
 
 
 
+
+
+
+
+/* -------------------------CONTACT COMPONENT BELOW--------------------------- */
+
+
+.contact-left-section-one{
+  display: block;
+  /* padding: 20px; */
+}
+
+
+.contact-left-section-one-content{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
+}
+
+
+
+
+
+
+
+
+
+
+/* -------------------------CONTACT COMPONENT ABOVE--------------------------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ------------------------------FORM BELOW--------------------------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .contact-component{
@@ -1229,7 +1289,7 @@ footer {
   background-color: rgb(11, 43, 83);
   color: white;
   border: solid black 2px;
-  color: rgb(206, 175, 37);;
+  color: rgb(207, 163, 40);;
 
 }
 
@@ -1259,6 +1319,56 @@ footer {
 
 
 /* -------------------------------EDUCATION COMPONENT ABOVE----------------------- */
+
+
+
+
+
+
+
+
+
+/* ------------------------------RESUME PAGE BELOW--------------------------------- */
+
+
+
+.resume-page-component{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ------------------------------RESUME PAGE ABOVE--------------------------------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
