Added better quality pic

--- a/cobi-gottschalk/src/App.css
+++ b/cobi-gottschalk/src/App.css
@@ -100,7 +100,8 @@ margin-left: -40px;
   font-family: 'Bebas Neue';
   
   /* background-image: url('./images/image7.png'); */
-  background-image: url('./images/head-shot.png');
+  /* background-image: url('./images/head-shot.png'); */
+  background-image: url('./images/aipic.png');
   /* background-size: 210px; */
   background-size: 204px;
   background-size: 204px;
